Updated for stretch problem - fixed navigation and background opacity

--- a/css/index.css
+++ b/css/index.css
@@ -159,22 +159,18 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
-}
-@media (max-width: 500px) {
-  .container {
-    width: 90%;
-    margin: 0 0;
-  }
+  background-image: linear-gradient(to right, rgba(220, 236, 235, 0.801), rgba(36, 236, 243, 0.801));
 }
 .main-navigation {
   width: 100%;
   height: 100px;
   background: #f6f6f6;
+  position: fixed;
 }
 @media (max-width: 500px) {
   .main-navigation {
     width: 100%;
-    margin: 0 5%;
+    margin: 0%;
   }
 }
 .main-navigation .nav-container {
@@ -217,6 +213,9 @@ footer {
   footer {
     padding-top: 5px;
   }
+}
+.home {
+  padding-top: 100px;
 }
 .home .intro h2 {
   padding: 15px;
