--- a/less/global.less
+++ b/less/global.less
@@ -39,9 +39,9 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
-
-  @media @phone {
-    width: 90%;
-    margin: 0 0;
-  }
+  background-image: linear-gradient(
+    to right,
+    rgba(220, 236, 235, 0.801),
+    rgba(36, 236, 243, 0.801)
+  );
 }
