--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,11 +2,10 @@
   width: 100%;
   height: 100px;
   background: @nav-bg;
-  //border-bottom: 2px dashed @navigation-border;
-  //position: fixed;
+  position: fixed;
   @media @phone {
     width: 100%;
-    margin: 0 5%;
+    margin: 0%;
   }
 
   .nav-container {
